Added CacheUnitTestCase environment.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>